--- a/trivia/src/styles/global/base.scss
+++ b/trivia/src/styles/global/base.scss
@@ -6,6 +6,7 @@
 
 html, body {
 	height: 100%;
+  width: 100%;
 }
 
 body {
@@ -40,6 +41,9 @@ body {
   width: 100%;
   height: 100%;
   
+  button {
+    position: absolute;
+  }
 
   .wrapper {
     display: flex;
