--- a/trivia/src/styles/global/base.scss
+++ b/trivia/src/styles/global/base.scss
@@ -42,7 +42,7 @@ body {
   width: 100%;
   height: 100%;
   
-  button {
+  #movingButton {
     position: absolute;
     background: transparent;
     text-align: center;
@@ -52,6 +52,7 @@ body {
     border-top: 50px solid transparent;
     border-right: 75px solid pink;
     border-bottom: 50px solid transparent;
+    filter: drop-shadow(10px 7px 10px rgb(136, 136, 224));
 
     span {
       position: absolute;
@@ -61,7 +62,7 @@ body {
     }
   }
 
-  button:hover {
+  #movingButton:hover {
     border-right-color: orange;
     color: rgb(165, 247, 0);
   }
@@ -197,10 +198,10 @@ body {
   
 }
 
-.triangle-left {
-  width: 0;
-  height: 0;
-  border-top: 25px solid transparent;
-  border-right: 50px solid #333;
-  border-bottom: 25px solid transparent;
-}
+// .triangle-left {
+//   width: 0;
+//   height: 0;
+//   border-top: 25px solid transparent;
+//   border-right: 50px solid #333;
+//   border-bottom: 25px solid transparent;
+// }
