--- a/trivia/src/styles/global/base.scss
+++ b/trivia/src/styles/global/base.scss
@@ -5,12 +5,9 @@
   font-family: 'Passion One', sans-serif;
 }
 
-html, body {
-	height: 100%;
-  width: 100%;
-}
-
 body {
+  height: 100vh;
+  width: 100%;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
