"Added a check answer function so option selected would hight red if wrong and green if correct."

--- a/trivia/src/styles/components/TriviaGame.scss
+++ b/trivia/src/styles/components/TriviaGame.scss
@@ -58,3 +58,13 @@
     }
   }
 }
+
+.correct{
+  background: #0be890;
+  border-color: #00d397;
+}
+
+.wrong{
+  background: rgb(234, 42, 42);
+  border-color: #FF4a4a;
+}
