--- a/trivia/src/styles/main.scss
+++ b/trivia/src/styles/main.scss
@@ -1,3 +1,4 @@
 @import './global/base.scss';
+@import './global/variables.scss';
 @import './components/SelectQuiz.scss';
 @import './components/TriviaGame.scss';
