--- a/trivia/src/styles/components/TriviaGame.scss
+++ b/trivia/src/styles/components/TriviaGame.scss
@@ -1,20 +1,3 @@
-@keyframes transition {
-  20% {
-    background-color: purple;
-  }
-  40% {
-    background-color: violet;
-  }
-  60% {
-    background-color: skyblue;
-  }
-  80% {
-    background-color: cyan;
-  }
-  100% {
-    background-color: magenta;
-  }
-}
 
 
 .quiz-wrapper{
@@ -23,44 +6,124 @@
   align-items: center;
   min-height: 100vh;
 
-  background: white;
-  background-image: 
-    radial-gradient(
-      purple 10%, black 20%, skyblue 40%, red 60%,
-      violet 80%, magenta 100%,
-    ),
-    linear-gradient(65deg,
-      rgba(245, 66, 239,.1) 10%,
-      rgba(78, 239, 245,.0) 20%,
-      rgba(245, 66, 239,.1) 30%),
-    linear-gradient(-65deg,
-      rgba(245, 66, 239,.1) 10%,
-      rgba(78, 239, 245,.0) 20%,
-      rgba(245, 66, 239,.1) 30%),
-    radial-gradient(
-      purple 10%, black 20%, skyblue 40%, red 60%,
-      violet 80%, magenta 100%,
-    ),
+  &.bg1{
+    background: white;
+    background-image: 
+      radial-gradient(
+        purple 10%, black 20%, skyblue 40%, red 60%,
+        violet 80%, magenta 100%,
+      ),
+      linear-gradient(65deg,
+        rgba(245, 66, 239,.1) 10%,
+        rgba(78, 239, 245,.0) 20%,
+        rgba(245, 66, 239,.1) 30%),
+      linear-gradient(-65deg,
+        rgba(245, 66, 239,.1) 10%,
+        rgba(78, 239, 245,.0) 20%,
+        rgba(245, 66, 239,.1) 30%),
+      radial-gradient(
+        purple 10%, black 20%, skyblue 40%, red 60%,
+        violet 80%, magenta 100%,
+      ),
+      
+      radial-gradient(
+        purple 10%, black 20%, skyblue 40%, red 60%,
+        violet 80%, magenta 100%,
+      );
     
-    radial-gradient(
-      purple 10%, black 20%, skyblue 40%, red 60%,
-      violet 80%, magenta 100%,
-    );
-  
-  background-blend-mode: 
-    lighten, 
-    normal, 
-    normal,
-    overlay;
-  background-size: 
-    10em 10em,
-    8em 8em,
-    6em 6em,
-    4em 4em,
-    2em 2em;
-  animation: transition 15s linear infinite;
-  background-position: 
-    50% 50%;
+    background-blend-mode: 
+      lighten, 
+      normal, 
+      normal,
+      overlay;
+    background-size: 
+      10em 10em,
+      8em 8em,
+      6em 6em,
+      4em 4em,
+      2em 2em;
+    animation: transition 15s linear infinite;
+    background-position: 
+      50% 50%;
+    }
+
+    &.bg2{  
+      --s: 90px; /* control the size */
+      --d: 5px;  /* control the gap between stars */
+      
+      --_g: #fff220 36deg, #0000 0;   
+      background:
+        conic-gradient(from 162deg at calc(var(--s) * .5)  calc(var(--s) * .68), var(--_g)),
+        conic-gradient(from 18deg  at calc(var(--s) * .19) calc(var(--s) * .59), var(--_g)),
+        conic-gradient(from 306deg at calc(var(--s) * .81) calc(var(--s) * .59), var(--_g)),
+        #e181c2;
+      background-position: 0 calc(var(--s) * 0.35);
+      background-size: calc(var(--s) + var(--d)) calc(var(--s) + var(--d));
+    }
+
+    &.bg3{
+      --s: 120px; /* control the size */
+      --c1: #e7525b;
+      --c2: #78dbf0;
+      
+      --_g: 80%,var(--c1) 25.4%,#0000 26%;
+      background:
+        radial-gradient(at 80% var(--_g)),
+        radial-gradient(at 20% var(--_g)),
+        conic-gradient(from -45deg at 50% 41%,var(--c1) 90deg,var(--c2) 0) 
+          calc(var(--s)/2) 0;
+      background-size: var(--s) var(--s);
+    }
+
+    &.bg4{     
+      --s: 25vmin;
+      --p: calc(var(--s) / 2);
+      --c1: pink;
+      --c2: dodgerblue;
+      --c3: white;
+      --bg: var(--c3);
+      --d: 4000ms;
+      --e: cubic-bezier(0.76, 0, 0.24, 1);
+      
+      background-color: var(--bg);
+      background-image:
+        linear-gradient(45deg, var(--c1) 25%, transparent 25%),
+        linear-gradient(-45deg, var(--c1) 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, var(--c2) 75%),
+        linear-gradient(-45deg, transparent 75%, var(--c2) 75%);
+      background-size: var(--s) var(--s);
+      background-position: 
+        calc(var(--p) *  1) calc(var(--p) *  0), 
+        calc(var(--p) * -1) calc(var(--p) *  1), 
+        calc(var(--p) *  1) calc(var(--p) * -1), 
+        calc(var(--p) * -1) calc(var(--p) *  0);
+      animation: 
+        color var(--d) var(--e) infinite,
+        position var(--d) var(--e) infinite;
+    }
+
+    &.bg5{
+      background: linear-gradient(to right, #1e5799 0%,#2ce0bf 19%,#76dd2c 40%,#dba62b 60%,#e02cbf 83%,#1e5799 100%); 
+      background-size: 10000px 100%;
+      animation: bg 15s linear infinite ;
+    }
+
+    &.bg6{
+      --s: 100px; /* control the size */
+      --c1: #C3CCAF;
+      --c2: #67434F;
+      --_s: calc(2*var(--s)) calc(2*var(--s));
+      --_g: var(--_s) conic-gradient(at 40% 40%,#0000 75%,var(--c1) 0);
+      --_p: var(--_s) conic-gradient(at 20% 20%,#0000 75%,var(--c2) 0);
+      background:
+        calc( .9*var(--s)) calc( .9*var(--s))/var(--_p),
+        calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
+        calc( .7*var(--s)) calc( .7*var(--s))/var(--_g),
+        calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
+        conic-gradient(from 90deg at 20% 20%,var(--c2) 25%,var(--c1) 0) 
+        0 0/var(--s) var(--s);
+      animation: m 3s infinite;
+    }
 
   .quiz-container{
     width: 640px;
