"Created error page."

--- a/trivia/src/styles/main.scss
+++ b/trivia/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './global/base.scss';
 @import './global/variables.scss';
+@import './components/ErrorPage.scss';
 @import './components/SelectQuiz.scss';
 @import './components/TriviaGame.scss';
